--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   
   # Supabase pour le workshop en ligne
   supabase_flutter: ^2.9.1
+  
+  # FFI pour l'intégration native
+  ffi: ^2.1.4
 
 dev_dependencies:
   flutter_test:
