--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-SUPABASE_KEY=supabase_anon_key
+# Copiez ce fichier vers .env et ajoutez vos vraies clés Supabase
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_KEY=your_supabase_anon_key_here
